fix: layout overflow

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body,
+#root {
+  @apply h-full;
+}
+
 @layer base {
   * {
     transition: background-color 200ms ease;
